--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Leo-shaoqiang-blog",
   "scripts": {
     "dev": "vuepress dev docs --temp .temp",
-    "docs:build": "vuepress build docs",
+    "build": "vuepress build docs",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "npm run build && pm2 start appjs",
     "d": "bash deploy.sh"
